; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/extr_sort.c_add_key.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/extr_sort.c_add_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@.str = private unnamed_addr constant [6 x i8] c"\0A\09\09\09 \00", align 1
@INDENT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c" %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.strbuf*, i8*, i32*)* @add_key to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_key(%struct.strbuf* %0, i8* %1, i32* %2) #0 {
  %4 = alloca %struct.strbuf*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  store %struct.strbuf* %0, %struct.strbuf** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %6, align 8
  %8 = load i32, i32* %7, align 4
  %9 = icmp sge i32 %8, 75
  br i1 %9, label %10, label %15

10:                                               ; preds = %3
  %11 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %12 = call i32 @strbuf_addstr(%struct.strbuf* %11, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %13 = load i32, i32* @INDENT, align 4
  %14 = load i32*, i32** %6, align 8
  store i32 %13, i32* %14, align 4
  br label %15

15:                                               ; preds = %10, %3
  %16 = load %struct.strbuf*, %struct.strbuf** %4, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = call i32 @strbuf_addf(%struct.strbuf* %16, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* %17)
  %19 = load i8*, i8** %5, align 8
  %20 = call i64 @strlen(i8* %19)
  %21 = add nsw i64 %20, 1
  %22 = load i32*, i32** %6, align 8
  %23 = load i32, i32* %22, align 4
  %24 = sext i32 %23 to i64
  %25 = add nsw i64 %24, %21
  %26 = trunc i64 %25 to i32
  store i32 %26, i32* %22, align 4
  ret void
}

declare dso_local i32 @strbuf_addstr(%struct.strbuf*, i8*) #1

declare dso_local i32 @strbuf_addf(%struct.strbuf*, i8*, i8*) #1

declare dso_local i64 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
